Bug fix when use too big num and see Infinity. Add feature that can change positive num to negative

--- a/style.css
+++ b/style.css
@@ -168,13 +168,13 @@ svg {
     width: 30px;
     position: absolute;
     border-radius: 50%;
-    box-shadow: 0px 0px 15px 0px rgb(239, 255, 12);
-    background: white;
+    box-shadow: 0px 0px 15px 2px rgba(227, 238, 82, 0.874);
+    background: #e3eeff;
     transition: background 0.5s;
 }
 
 svg:hover {
-    background: rgba(0, 0, 0, 0.204);
+    background: rgba(228, 238, 82, 0.5);
     border-radius: 50%;
 }
 
